# hw_2_5

./: README.md  all_currency.txt  exchange.py  index.html  main.py  pyproject.toml  server.py
