[tool.poetry]
name = "hw-2-5"
version = "0.1.0"
description = ""
authors = ["ZatokaV <zatokav@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_2_5"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
websockets = "^10.4"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
